--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "eject": "react-scripts eject"
   },
   "browser": {
+    "crypto": false,
     "fs": false,
     "path": false,
-    "os": false
+    "os": false,
+    "net": false,
+    "stream": false,
+    "tls": false
   },
   "eslintConfig": {
     "extends": [
