--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@pingux/astro": "^1.37.2",
     "face-api.js": "^0.22.2",
-    "react": "^16.8.6",
+    "react": "16.8.3",
     "react-dom": "^18.2.0",
     "react-scripts": "4.0.3"
   },
