--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@pingux/astro": "^1.37.2",
     "face-api.js": "^0.22.2",
-    "react": "16.8.3",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
