--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@pingux/astro": "^1.37.2",
     "face-api.js": "^0.22.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-scripts": "4.0.3"
   },
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.8.1"
   }
 }
